8/27 19:30 at Busan IT Center

--- a/src/main/resources/templates/user/profile.mustache
+++ b/src/main/resources/templates/user/profile.mustache
@@ -13,9 +13,15 @@
 				<h1>serranoarevalo</h1>
 				<a href="edit-profile.html">
 					<button class="profile_edit_btn">팔로우</button>
+				</a>
+				<a href="edit-profile.html">
 					<button class="profile_edit_btn">회원수정</button>
+				</a>
+				<a href="edit-profile.html">
 					<button class="profile_edit_btn">사진등록</button>
-				</a> <i class="fa fa-cog fa-lg"></i>
+				</a>
+				<a href="edit-profile.html">
+				 <i class="fa fa-cog fa-lg"></i> </a> 
 			</div>
 			<ul class="profile__stats">
 				<li class="profile__stat"><span class="profile__stat-number">313</span>
